--- a/tehpucuk/package.json
+++ b/tehpucuk/package.json
@@ -1,26 +1,19 @@
 {
   "name": "tehpucuk",
   "version": "1.1.4",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.3"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sitestnet/joys"
   },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
-  }
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sitestnet/joys/issues"
+  },
+  "homepage": "https://github.com/sitestnet/joys"
 }
